--- a/menu-3.html
+++ b/menu-3.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./public/css/style.css">
     <script src="https://kit.fontawesome.com/9df359cbd1.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Menu A la française</title>
+    <title>Menu À la française</title>
   </head>
   <body>
     <header>
@@ -15,7 +15,7 @@
         </div>
       </header>
       <main>
-        <img class="photo" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+        <img class="photo" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
       </main>
   </body>
 </html>
