add underline green in menu 1

--- a/menu-1.html
+++ b/menu-1.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <header>
-      <div class="header__icon">
+      <!-- <a href="index.html"> -->
+      <button class="header__icon" onclick="location.href='./index.html'">
         <i class="fas fa-arrow-left"></i>
-      </div>
+      </button>
+
+    <!-- </a> -->
       <div class="header__logo header__logo--menu">
         <img src="./images/logo/ohmyfood.png" alt="ohmyfood">
       </div>
@@ -26,6 +29,7 @@
           </div>
           <section class="section-menu">
             <h2>entrées</h2>
+            <div class="underline"></div>
             <div class="container-column">
               <div class="card-menu-detail">
                 <div class="card-menu-detail__titre">Fricassée d'escargot</div>
@@ -50,6 +54,7 @@
               </div>
             </div>
             <h2>plats</h2>
+            <div class="underline"></div>
             <div class="container-column">
               <div class="card-menu-detail">
                 <div class="card-menu-detail__titre">Filet de boeuf aux herbes</div>
@@ -74,6 +79,7 @@
               </div>
             </div>
             <h2>desserts</h2>
+            <div class="underline"></div>
             <div class="container-column">
               <div class="card-menu-detail">
                 <div class="card-menu-detail__titre">Paris-Brest</div>
@@ -103,7 +109,7 @@
         
       </main>
 
-      <!-- <footer>
+      <footer>
         <div class="footer-logo"><img class="footer-logo__img" src="images/logo/ohmyfood.png" alt="ohmyfood"></div>
 
         <div class="footer-details">
@@ -122,6 +128,6 @@
             Contact
           </div>
         </div>
-      </footer> -->
+      </footer>
   </body>
 </html>
