adjust footer width 100%

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </main>
     
     <footer>
-      <!-- <div class="footer-logo"><img class="footer-logo__img" src="images/logo/ohmyfood.png" alt="ohmyfood"></div> -->
+      <div class="footer-logo"><img class="footer-logo__img" src="images/logo/ohmyfood.png" alt="ohmyfood"></div>
 
       <div class="footer-details">
         <div class="footer-details__container">
