add loader spinner

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>ohmyfood</title>
   </head>
   <body>
+    <div class="loader-spinner">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
     <header>
       <div class="header__logo">
         <img src="images/logo/ohmyfood.png" alt="ohmyfood">
