--- a/menu-1.html
+++ b/menu-1.html
@@ -153,7 +153,7 @@
               <div class="container-column padding-15 flex1">
                 <div class="card-menu-detail__titre">Mousse au chocolat</div>
                 <div class="card-menu-detail__detail">
-                  <div>Au piment d'Espelette et à la truffe noire</div>
+                  <div class="card-menu-detail__detail-">Au piment d'Espelette et à la truffe noire</div>
                   <div class="card-menu-detail__prix">23€</div>
                 </div>
               </div>
@@ -168,6 +168,7 @@
           
       </section>
       </div>
+
       
     </main>
 
