add keyframes for loader-spinner

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <div></div>
       <div></div>
     </div>
-    <header>
+    <div class="main-container">
+      <header>
       <div class="header__logo">
         <img src="images/logo/ohmyfood.png" alt="ohmyfood">
       </div>
@@ -124,6 +125,8 @@
         </div>
       </div>
     </footer>
+    </div>
+    
       
   </body>
 </html>
