modif animation .heart

--- a/menu-1.html
+++ b/menu-1.html
@@ -22,7 +22,9 @@
       <div class=card-menu>
         <div class="card-menu__titre">
           <div>La palette du goût</div>
-          <i class="far fa-heart"></i>
+          <i class="heart heart-anim far fa-heart"></i>
+          <i class="heart--modified fas fa-heart"></i>
+
         </div>
         <section class="section-menu">
 
