add animation card-menu-detail

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
               <div class="card-restaurant__details" onclick="location.href=''">
                 <div class="card-title"><strong>La palette du goût</strong></div>
                 <div>Ménilmontant</div>
-                <i class="heart far fa-heart"></i>
+                <i class="heart heart-anim far fa-heart"></i>
+                <i class="heart--modified fas fa-heart"></i>
               </div>
               <div class="btn--new"><strong>Nouveau</strong></div>
             </div>
