--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <section id="restaurants">
           <h1>Restaurants</h1>
           <div id="view-card-restaurants">
-            <div class="card-restaurant" onclick="location.href='./menu-1.html'">
-              <img class="photo card-restaurant__img" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-              <div class="card-restaurant__details" onclick="location.href=''">
+            <div class="card-restaurant">
+              <img class="photo card-restaurant__img" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" onclick="location.href='./menu-1.html'">
+              <div class="card-restaurant__details">
                 <div class="card-title"><strong>La palette du goût</strong></div>
                 <div>Ménilmontant</div>
                 <i class="heart heart-anim far fa-heart"></i>
