--- a/menu-1.html
+++ b/menu-1.html
@@ -34,20 +34,20 @@
           <div class="container-column padding-15">
 
             <div class="card-menu-detail">
-              <div class="container-column padding-15 flex1">
+              <div class="card-menu-detail__left padding-15 flex1">
                 <div class="card-menu-detail__titre">Fricassée d'escargot</div>
                 <div class="card-menu-detail__detail">
                   <div>Au piment d'espelette</div>
                   <div class="card-menu-detail__prix">25€</div>
                 </div>
-              </div>
+              </div>  
               <div class="card-menu-detail__right">
                 <i class="fas fa-check-circle"></i>
               </div>
             </div>
 
             <div class="card-menu-detail">
-              <div class="container-column padding-15 flex1">
+              <div class="card-menu-detail__left padding-15 flex1">
                 <div class="card-menu-detail__titre">Foie gras de canard mi-cuit</div>
                 <div class="card-menu-detail__detail">
                   <div>Et ses copeaux de truffe noire</div>
@@ -61,7 +61,7 @@
               
             <div class="card-menu-detail">
 
-              <div class="container-column padding-15 flex1">
+              <div class="card-menu-detail__left padding-15 flex1">
                 <div class="card-menu-detail__titre">Oeuf au plat</div>
                 <div class="card-menu-detail__detail">
                   <div>Assaisonné à la truffe sur lit de caviar</div>
@@ -83,10 +83,10 @@
           <div class="container-column padding-15">
 
             <div class="card-menu-detail">
-              <div class="container-column padding-15 flex1">
+              <div class="card-menu-detail__left padding-15 flex1">
                 <div class="card-menu-detail__titre">Filet de boeuf aux herbes</div>
                 <div class="card-menu-detail__detail">
-                  <div>Accompagné de sa ribambelle de légumes</div>
+                  <div class="text-overflow">Accompagné de sa ribambelle de légumes</div>
                   <div class="card-menu-detail__prix">40€</div>
                 </div>
               </div>
@@ -96,7 +96,7 @@
             </div>
 
             <div class="card-menu-detail">
-              <div class="container-column padding-15 flex1">
+              <div class="card-menu-detail__left padding-15 flex1">
                 <div class="card-menu-detail__titre">Parmentier de queue de boeuf</div>
                 <div class="card-menu-detail__detail">
                   <div>À la truffe noire sur sa purée de panais</div>
@@ -109,7 +109,7 @@
             </div>
 
             <div class="card-menu-detail">
-              <div class="container-column padding-15 flex1">
+              <div class="card-menu-detail__left padding-15 flex1">
                 <div class="card-menu-detail__titre">Filet de turbot</div>
                 <div class="card-menu-detail__detail">
                   <div>Aux agrumes</div>
@@ -130,7 +130,7 @@
             <div class="container-column padding-15">
 
               <div class="card-menu-detail">
-                <div class="container-column padding-15 flex1">
+                <div class="card-menu-detail__left padding-15 flex1">
                   <div class="card-menu-detail__titre">Paris-Brest</div>
                   <div class="card-menu-detail__detail">
                     <div>Revisité</div>
@@ -143,7 +143,7 @@
               </div>
 
               <div class="card-menu-detail">
-                <div class="container-column padding-15 flex1">
+                <div class="card-menu-detail__left padding-15 flex1">
                   <div class="card-menu-detail__titre">Macaron au chocolat d'exception</div>
                   <div class="card-menu-detail__detail">
                     <div>Et glace à la vanille de Madagascar</div>
@@ -156,7 +156,7 @@
               </div>
 
               <div class="card-menu-detail">
-                <div class="container-column padding-15 flex1">
+                <div class="card-menu-detail__left padding-15 flex1">
                   <div class="card-menu-detail__titre">Mousse au chocolat</div>
                   <div class="card-menu-detail__detail">
                     <div class="card-menu-detail__detail-">Au piment d'Espelette et à la truffe noire</div>
