--- a/menu-2.html
+++ b/menu-2.html
@@ -35,7 +35,7 @@
           <div class="container-column padding-15">
 
             <div class="card-menu-detail">
-              <div class="container-column padding-15 flex1">
+              <div class="card-menu-detail__left padding-15 flex1">
                 <div class="card-menu-detail__titre">Fricassée d'escargot</div>
                 <div class="card-menu-detail__detail">
                   <div>Au piment d'espelette</div>
@@ -48,7 +48,7 @@
             </div>
 
             <div class="card-menu-detail">
-              <div class="container-column padding-15 flex1">
+              <div class="card-menu-detail__left padding-15 flex1">
                 <div class="card-menu-detail__titre">Foie gras de canard mi-cuit</div>
                 <div class="card-menu-detail__detail">
                   <div>Et ses copeaux de truffe noire</div>
@@ -61,8 +61,7 @@
             </div>
               
             <div class="card-menu-detail">
-
-              <div class="container-column padding-15 flex1">
+              <div class="card-menu-detail__left padding-15 flex1">
                 <div class="card-menu-detail__titre">Oeuf au plat</div>
                 <div class="card-menu-detail__detail">
                   <div>Assaisonné à la truffe sur lit de caviar</div>
