index.html ok pour les breakpoints

--- a/menu-2.html
+++ b/menu-2.html
@@ -38,7 +38,7 @@
               <div class="card-menu-detail__left padding-15 flex1">
                 <div class="card-menu-detail__titre">Fricassée d'escargot</div>
                 <div class="card-menu-detail__detail">
-                  <div>Au piment d'espelette</div>
+                  <div>Au piment d'espelett</div>
                   <div class="card-menu-detail__prix">25€</div>
                 </div>
               </div>
