menu1.html fix animation + size photo breakpoint

--- a/menu-1.html
+++ b/menu-1.html
@@ -35,9 +35,9 @@
 
               <div class="card-menu-detail">
                 <div class="card-menu-detail__left padding-15 flex1">
-                  <div class="card-menu-detail__titre">Fricassée d'escargot</div>
+                  <div class="card-menu-detail__titre text-overflow">Fricassée d'escargot</div>
                   <div class="card-menu-detail__detail">
-                    <div>Au piment d'espelette</div>
+                    <div class="text-overflow">Au piment d'espelette</div>
                     <div class="card-menu-detail__prix">25€</div>
                   </div>
                 </div>  
@@ -48,9 +48,9 @@
 
               <div class="card-menu-detail">
                 <div class="card-menu-detail__left padding-15 flex1">
-                  <div class="card-menu-detail__titre">Foie gras de canard mi-cuit</div>
+                  <div class="card-menu-detail__titre text-overflow">Foie gras de canard mi-cuit</div>
                   <div class="card-menu-detail__detail">
-                    <div>Et ses copeaux de truffe noire</div>
+                    <div class="text-overflow">Et ses copeaux de truffe noire</div>
                     <div class="card-menu-detail__prix">35€</div>
                   </div>
                 </div>
@@ -62,9 +62,9 @@
               <div class="card-menu-detail">
 
                 <div class="card-menu-detail__left padding-15 flex1">
-                  <div class="card-menu-detail__titre">Oeuf au plat</div>
+                  <div class="card-menu-detail__titre text-overflow">Oeuf au plat</div>
                   <div class="card-menu-detail__detail">
-                    <div>Assaisonné à la truffe sur lit de caviar</div>
+                    <div class="text-overflow">Assaisonné à la truffe sur lit de caviar</div>
                     <div class="card-menu-detail__prix">20€</div>
                   </div>
                 </div>
@@ -84,7 +84,7 @@
 
             <div class="card-menu-detail">
               <div class="card-menu-detail__left padding-15 flex1">
-                <div class="card-menu-detail__titre">Filet de boeuf aux herbes</div>
+                <div class="card-menu-detail__titre text-overflow">Filet de boeuf aux herbes</div>
                 <div class="card-menu-detail__detail">
                   <div class="text-overflow">Accompagné de sa ribambelle de légumes</div>
                   <div class="card-menu-detail__prix">40€</div>
@@ -97,9 +97,9 @@
 
             <div class="card-menu-detail">
               <div class="card-menu-detail__left padding-15 flex1">
-                <div class="card-menu-detail__titre">Parmentier de queue de boeuf</div>
+                <div class="card-menu-detail__titre text-overflow">Parmentier de queue de boeuf</div>
                 <div class="card-menu-detail__detail">
-                  <div>À la truffe noire sur sa purée de panais</div>
+                  <div class="text-overflow">À la truffe noire sur sa purée de panais</div>
                   <div class="card-menu-detail__prix">35€</div>
                 </div>
               </div>
@@ -110,9 +110,9 @@
 
             <div class="card-menu-detail">
               <div class="card-menu-detail__left padding-15 flex1">
-                <div class="card-menu-detail__titre">Filet de turbot</div>
+                <div class="card-menu-detail__titre text-overflow">Filet de turbot</div>
                 <div class="card-menu-detail__detail">
-                  <div>Aux agrumes</div>
+                  <div class="text-overflow">Aux agrumes</div>
                   <div class="card-menu-detail__prix">44€</div>
                 </div>
               </div>
@@ -131,9 +131,9 @@
 
               <div class="card-menu-detail">
                 <div class="card-menu-detail__left padding-15 flex1">
-                  <div class="card-menu-detail__titre">Paris-Brest</div>
+                  <div class="card-menu-detail__titre text-overflow">Paris-Brest</div>
                   <div class="card-menu-detail__detail">
-                    <div>Revisité</div>
+                    <div class="text-overflow">Revisité</div>
                     <div class="card-menu-detail__prix">18€</div>
                   </div>
                 </div>
@@ -144,9 +144,9 @@
 
               <div class="card-menu-detail">
                 <div class="card-menu-detail__left padding-15 flex1">
-                  <div class="card-menu-detail__titre">Macaron au chocolat d'exception</div>
+                  <div class="card-menu-detail__titre text-overflow">Macaron au chocolat d'exception</div>
                   <div class="card-menu-detail__detail">
-                    <div>Et glace à la vanille de Madagascar</div>
+                    <div class="text-overflow">Et glace à la vanille de Madagascar</div>
                     <div class="card-menu-detail__prix">22€</div>
                   </div>
                 </div>
@@ -157,9 +157,9 @@
 
               <div class="card-menu-detail">
                 <div class="card-menu-detail__left padding-15 flex1">
-                  <div class="card-menu-detail__titre">Mousse au chocolat</div>
+                  <div class="card-menu-detail__titre text-overflow">Mousse au chocolat</div>
                   <div class="card-menu-detail__detail">
-                    <div class="card-menu-detail__detail-">Au piment d'Espelette et à la truffe noire</div>
+                    <div class="text-overflow">Au piment d'Espelette et à la truffe noire</div>
                     <div class="card-menu-detail__prix">23€</div>
                   </div>
                 </div>
