fix photo index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="card-line">
               <h1>Restaurants</h1>
               <div class="card-restaurant">
-                <img class="photo card-restaurant__img" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" onclick="location.href='./menu-1.html'">
+                <img class="card-restaurant__img photo" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" onclick="location.href='./menu-1.html'">
                 <div class="card-restaurant__details">
                   <div class="card-title"><strong>La palette du goût</strong></div>
                   <div>Ménilmontant</div>
