--- a/menu-1.html
+++ b/menu-1.html
@@ -18,7 +18,7 @@
     </header>
 
     <main class="main-menu">
-      <img class="photo" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+      <img class="photo-menu" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
       <div class=card-menu>
         <div class="card-menu__titre">
           <div>La palette du goût</div>
