add text menu 2, 3 et 4

--- a/menu-1.html
+++ b/menu-1.html
@@ -196,7 +196,7 @@
           Mentions légales
         </div>
         <div class="footer-details__container">
-          Contact
+          <a href="mailto:">Contact</a>
         </div>
       </div>
     </footer>
